
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;


 int CLOCK_REALTIME ;
 int RACE_TIME ;
 int close (scalar_t__) ;
 int count ;
 scalar_t__ fd ;
 int list_add_thread ;
 int perror (char*) ;
 int printf (char*,int) ;
 int pthread_create (int *,int *,int ,void*) ;
 int pthread_join (int ,int *) ;
 scalar_t__ timerfd_create (int ,int ) ;
 int usleep (int) ;

int do_race(){
    int ret_add[2];
    int i;
    int j;
    pthread_t th[2]={0};

    i=0;
    while(i<RACE_TIME){
        if(i%128)
            printf("%d\n",i);


        fd=timerfd_create(CLOCK_REALTIME,0);
        if(fd<0){
            perror("timerfd craete failed!");
            return -1;
        }
        ret_add[0] = pthread_create(&th[0],((void*)0),list_add_thread,(void*)1);
        ret_add[1] = pthread_create(&th[1],((void*)0),list_add_thread,(void*)2);

        for( j=0;j<2;j++){
            pthread_join(th[j],((void*)0));
        }

        close(fd);
        usleep(150000);

        i++;
        count++;
    }
    return 0;
}
